RESOLVED FIXED96660
[BlackBerry] Missing conditions in InRegionScrollerPrivate::canScrollRenderBox
https://bugs.webkit.org/show_bug.cgi?id=96660
Summary [BlackBerry] Missing conditions in InRegionScrollerPrivate::canScrollRenderBox
Jacky Jiang
Reported 2012-09-13 09:34:11 PDT
PR:207884
Attachments
Patch (1.83 KB, patch)
2012-09-13 09:52 PDT, Jacky Jiang
tonikitoo: review+
Jacky Jiang
Comment 1 2012-09-13 09:52:13 PDT
Jacky Jiang
Comment 2 2012-09-13 10:03:19 PDT
Note You need to log in before you can comment on or make changes to this bug.