[BlackBerry] Missing conditions in InRegionScrollerPrivate::canScrollRenderBox https://bugs.webkit.org/show_bug.cgi?id=96660

Reviewed by Antonio Gomes.
Patch by Jacky Jiang <zhajiang@rim.com>

PR: 207884
According to RenderBox::canBeScrolledAndHasScrollableArea(), we should
bail out early in InRegionScrollerPrivate::canScrollRenderBox() if the
RenderBox's scroll height equals the client height and the scroll width
equals the client width. Otherwise, we will miss the conditions.

* Api/InRegionScroller.cpp:
(BlackBerry::WebKit::InRegionScrollerPrivate::canScrollRenderBox):

git-svn-id: svn://svn.chromium.org/blink/trunk@128477 bbb929c8-8fbe-4397-9dbb-9b2b20218538